--- a/src/pages/Cards-page/cards.css
+++ b/src/pages/Cards-page/cards.css
@@ -1,3 +1,9 @@
+.e__wallet_section {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .cards__h1 {
   text-align: center;
   font-weight: 700;
@@ -18,4 +24,9 @@
 .e__wallet__container__all__cards__box {
   max-height: 300px;
   overflow-y: scroll;
+}
+.e__wallet__container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
