--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -5,7 +5,10 @@
   grid-template-rows: repeat(3 1fr);
   row-gap: 10px;
   position: relative;
-  max-width: 382px;
+  max-width: 340px;
+  min-width: 320px;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .card__chip__signal_box {
@@ -17,7 +20,6 @@
 .chip {
   max-width: 46px;
   max-height: 38px;
-  background-color: #fff;
   border-radius: 8px;
   padding: 0.8px 2px;
 }
@@ -30,6 +32,14 @@
   height: 51px;
 }
 
+.bankVendor__default {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  width: 27px;
+  height: 38px;
+}
+
 .signal {
   max-width: 42px;
   max-height: 42px;
@@ -38,7 +48,6 @@
 }
 
 .card__number__box {
-  /* width: 100%; */
   justify-self: center;
 }
 
@@ -85,6 +94,10 @@
 
 .Ninja {
   background-color: #222222;
+}
+
+.Default {
+  background-color: #d0d0d0;
 }
 
 .lightBg,
