--- a/src/pages/Cards-page/cards.module.css
+++ b/src/pages/Cards-page/cards.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 }
 
 .cards__h1 {
@@ -21,12 +22,32 @@
   padding: 5px 0;
 }
 
-.e__wallet__container__all__cards__box {
-  max-height: 300px;
-  overflow-y: scroll;
-}
 .e__wallet__container {
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+.e__wallet__container__all__cards__box {
+  padding: 20px 0px;
+  height: 300px;
+  position: relative;
+  display: grid;
+  grid-template-rows: auto;
+  overflow-y: auto;
+  border-radius: 8px;
+}
+
+.card__div {
+  transition: all 0.3s ease;
+  cursor: pointer;
+  position: absolute;
+  left: 0;
+  top: 8dvh;
+  z-index: 1;
+  border: 1px solid transparent;
+  border-radius: 10px;
+
+  &:hover {
+    border-color: #222222;
+  }
 }
