Added interactivity for add card, add virtual wallet with clickable cards

--- a/src/pages/Cards-page/cards.css
+++ b/src/pages/Cards-page/cards.css
@@ -57,6 +57,10 @@
   text-align: right;
 }
 
+.testyTest {
+  margin-bottom: 5rem;
+}
+
 @media screen and (max-width: 768px) {
   .card-container {
     width: 100%;
