--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,5 +1,5 @@
 
-  .card {
+.card {
     width: 382px;
     height: 241px;
     margin: 10px;
@@ -40,3 +40,26 @@ width: 27px;
 height: 38px;
 
 }
+.card-container {
+    width: 382px;
+    height: 241px;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 15px;
+  }
+  
+  .bitcoinColor {
+    background-color: yellow;
+  }
+  
+  .ninjaBankColor {
+    background-color: blue;
+  }
+  
+  .blockChainIncColor {
+    background-color: green;
+  }
+  
+  .evilCorpColor {
+    background-color: rgb(128, 0, 90);
+  }
