Added a new component for Chip Icons, removed component for vendor color and used CSS instead, started error handling for input fields

--- a/src/pages/Cards-page/cards.css
+++ b/src/pages/Cards-page/cards.css
@@ -2,16 +2,16 @@
   background-color: #ffae34;
 }
 
-.ninjabank-background {
+.ninjaBank-background {
   background-color: #222222;
   color: white;
 }
 
-.blockchain-background {
+.blockChain-background {
   background-color: #8b58f9;
 }
 
-.evilcorp-background {
+.evilCorp-background {
   background-color: #f33355;
 }
 
