--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,5 @@
-<<<<<<< HEAD
+@import url("https://fonts.googleapis.com/css2?family=PT+Mono&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=PT+Mono&display=swap');
-
-
-=======
->>>>>>> e-wallet-lucas
 * {
   padding: 0;
   box-sizing: border-box;
