--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,41 +1,107 @@
-.card {
-  background-color: lightgray;
-  width: 382px;
-  height: 241px;
-  margin: 10px;
-  padding: 10px;
-  border-radius: 15px;
+.card__container {
+  padding: 15px;
+  border-radius: 10px;
+  display: grid;
+  grid-template-rows: repeat(3 1fr);
+  row-gap: 10px;
+  position: relative;
+  max-width: 340px;
+  min-width: 320px;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.card_img {
+.card__chip__signal_box {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 50px;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.card_numbers {
-  font-size: 29px;
-  font-family: "PT Mono", monospace;
-  font-weight: 400;
-  font-style: normal;
+.chip {
+  max-width: 46px;
+  max-height: 38px;
+  border-radius: 8px;
+  padding: 0.8px 2px;
 }
 
-.card_section_1 {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px 0px;
-  font-family: "PT Mono", monospace;
-  font-weight: 400;
-  font-style: normal;
+.bankVendor {
+  position: absolute;
+  top: 15px;
+  right: 0px;
+  width: 51px;
+  height: 51px;
 }
 
-.payment {
-  height: 84px;
-  width: 50px;
-}
-
-.img_bitcoin {
+.bankVendor__default {
+  position: absolute;
+  top: 15px;
+  right: 15px;
   width: 27px;
   height: 38px;
+}
+
+.signal {
+  max-width: 42px;
+  max-height: 42px;
+  margin-bottom: -8px;
+  padding: 0.8px 2px;
+}
+
+.card__number__box {
+  justify-self: center;
+}
+
+.card__number__box__p {
+  font-size: 29px;
+  font-weight: 400;
+  letter-spacing: 3%;
+}
+
+.card___holder__valid__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.card__holder__box p,
+.card__valid__box p {
+  font-weight: 400;
+  font-size: 12px;
+  color: #000000cc;
+  overflow: hidden;
+}
+
+.card__holder__box strong,
+.card__valid__box strong {
+  font-size: 18px;
+  line-height: 20px;
+  max-width: 251px;
+  font-weight: 400;
+}
+
+/* Colors */
+.Bitcoin {
+  background-color: #ffae34;
+}
+
+.Block {
+  background-color: #8b58f9;
+}
+
+.Evil {
+  background-color: #f33355;
+}
+
+.Ninja {
+  background-color: #222222;
+}
+
+.Default {
+  background-color: #d0d0d0;
+}
+
+.lightBg,
+.lightBg p,
+.lightBg strong {
+  color: #fff;
 }
